# fluxional_template

./: README.md  cookiecutter.json
fluxional_app/: {% if cookiecutter.use_poetry == "true" -%}pyproject.toml{%- endif %}
hooks/: post_gen_project.py
templates/: secrets.txt
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  README.md  app.py  cdk.json  main.py  pyproject.toml  requirements.txt  {% if cookiecutter.add_env_file == "true" %}.env{% endif %}  {% if cookiecutter.add_tests == "true" %}test.sh{% endif %}  {% if cookiecutter.use_poetry == "false" %}requirements.txt{% endif %}  {% if cookiecutter.use_poetry == "false" -%} requirements.txt {%- endif %}  {% if cookiecutter.use_poetry == "true" %}pyproject.toml{% endif %}
{{cookiecutter.project_name}}/.fluxional/: Dockerfile.lambda  cdk.json
{{cookiecutter.project_name}}/.fluxional/dockerfiles/: Dockerfile.lambda  docker-compose.dev.yaml
{{cookiecutter.project_name}}/.fluxional/scripts/: tests.sh
{{cookiecutter.project_name}}/.github/workflows/: {% if cookiecutter.use_github_actions == "true" -%}deploy.yml{%- endif %}
{{cookiecutter.project_name}}/hooks/: post_gen_project.py
{{cookiecutter.project_name}}/src/: docker-compose.dev.yaml
{{cookiecutter.project_name}}/tests/: test_example.py
{{cookiecutter.project_name}}/{% if cookiecutter.use_github_actions == "true" -%}.github{%- endif %}/workflows/: deploy.yml  testing.yml  {% if cookiecutter.use_github_actions == "true" -%}deploy.yml{%- endif %}
(+1 files in other folders)
